<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edibility</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food_list">Menu</string>
    <string name="title_activity_subscribed_alerts">Alert Subscriptions</string>
    <color name="holo_blue_light">#ff33b5e5</color>
    <color name="holo_green_light">#ff99cc00</color>
    <color name="holo_red_light">#ffff4444</color>
    <color name="holo_orange_light">#ffffbb33</color>
    <color name="silver">#C0C0C0</color>
    <string name="cowell">Cowell Stevenson</string>
    <string name="crown">Crown Merrill</string>
    <string name="eight">Eight Oakes</string>
    <string name="nine">Nine Ten</string>
    <string name="porter">Porter Kresge</string>
    <string name="alerts">Alerts</string>
    <string name="empty_list_alert_text">Check out the menu and tap on your favorite foods to subscribe to get notifications</string>
    <string name="empty_list_alert_title">No Subscriptions</string>

</resources>
